[gd_scene load_steps=8 format=2]

[ext_resource path="res://Incremental/IncrementalScreen.gd" type="Script" id=1]
[ext_resource path="res://Cave-Story.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/polices/CaveStory40.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/images/HUD/coeur plus petit.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[node name="IncrementalScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -960.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="HorizontalLimit" type="ColorRect" parent="."]
margin_top = 350.0
margin_right = 960.0
margin_bottom = 355.0
color = Color( 1, 0, 0, 1 )

[node name="VerticalLimit" type="ColorRect" parent="."]
margin_left = 480.0
margin_top = 350.0
margin_right = 485.0
margin_bottom = 1080.0
color = Color( 1, 0, 0, 1 )

[node name="CenterAntimatter" type="CenterContainer" parent="."]
margin_left = -1.75806
margin_top = -1.75809
margin_right = 958.242
margin_bottom = 351.242
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VerticalAntimatter" type="VBoxContainer" parent="CenterAntimatter"]
margin_left = 218.0
margin_top = 101.0
margin_right = 742.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 21

[node name="TotalAntimatter" type="Label" parent="CenterAntimatter/VerticalAntimatter"]
margin_right = 524.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "You have XXXX antimatter"
align = 1

[node name="AntimatterPerSeconds" type="Label" parent="CenterAntimatter/VerticalAntimatter"]
margin_top = 46.0
margin_right = 524.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 2 )
text = "You win XXXX antimatter per seconds
"

[node name="Temporaire" type="Button" parent="CenterAntimatter/VerticalAntimatter"]
margin_top = 120.0
margin_right = 524.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 3 )
text = "Temporaire"

[node name="CenterRobot" type="CenterContainer" parent="."]
margin_left = -1.0
margin_top = 353.0
margin_right = 483.0
margin_bottom = 1080.0

[node name="VerticalRobot" type="VBoxContainer" parent="CenterRobot"]
margin_left = 46.0
margin_top = 225.0
margin_right = 437.0
margin_bottom = 502.0
custom_constants/separation = 50

[node name="ImproveRobots" type="Label" parent="CenterRobot/VerticalRobot"]
margin_right = 391.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "Improve your Robot"

[node name="HPVContainer" type="HBoxContainer" parent="CenterRobot/VerticalRobot"]
margin_top = 75.0
margin_right = 391.0
margin_bottom = 115.0

[node name="PV" type="Label" parent="CenterRobot/VerticalRobot/HPVContainer"]
margin_top = 7.0
margin_right = 38.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
text = "PV"
align = 1

[node name="VSeparator" type="VSeparator" parent="CenterRobot/VerticalRobot/HPVContainer"]
margin_left = 42.0
margin_right = 46.0
margin_bottom = 40.0

[node name="Heart1" type="TextureRect" parent="CenterRobot/VerticalRobot/HPVContainer"]
margin_left = 50.0
margin_right = 90.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="Heart2" type="TextureRect" parent="CenterRobot/VerticalRobot/HPVContainer"]
margin_left = 94.0
margin_right = 134.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="Heart3" type="TextureRect" parent="CenterRobot/VerticalRobot/HPVContainer"]
margin_left = 138.0
margin_right = 178.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="ImprovePVButton" type="Button" parent="CenterRobot/VerticalRobot/HPVContainer"]
margin_left = 182.0
margin_right = 281.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "XX AM"

[node name="HCacContainer" type="HBoxContainer" parent="CenterRobot/VerticalRobot"]
margin_top = 165.0
margin_right = 391.0
margin_bottom = 196.0

[node name="Cac" type="Label" parent="CenterRobot/VerticalRobot/HCacContainer"]
margin_top = 3.0
margin_right = 78.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Melee"
align = 1

[node name="VSeparator" type="VSeparator" parent="CenterRobot/VerticalRobot/HCacContainer"]
margin_left = 82.0
margin_right = 86.0
margin_bottom = 31.0

[node name="MeleeValue" type="Label" parent="CenterRobot/VerticalRobot/HCacContainer"]
margin_left = 90.0
margin_top = 3.0
margin_right = 242.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "XX damage"

[node name="ImproveMeleeButton" type="Button" parent="CenterRobot/VerticalRobot/HCacContainer"]
margin_left = 246.0
margin_right = 345.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
text = "XX AM"

[node name="HDistanceContainer" type="HBoxContainer" parent="CenterRobot/VerticalRobot"]
margin_top = 246.0
margin_right = 391.0
margin_bottom = 277.0

[node name="Distance" type="Label" parent="CenterRobot/VerticalRobot/HDistanceContainer"]
margin_top = 3.0
margin_right = 124.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Distance"
align = 1

[node name="VSeparator" type="VSeparator" parent="CenterRobot/VerticalRobot/HDistanceContainer"]
margin_left = 128.0
margin_right = 132.0
margin_bottom = 31.0

[node name="DistanceValue" type="Label" parent="CenterRobot/VerticalRobot/HDistanceContainer"]
margin_left = 136.0
margin_top = 3.0
margin_right = 288.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "XX damage"

[node name="ImproveDistanceButton" type="Button" parent="CenterRobot/VerticalRobot/HDistanceContainer"]
margin_left = 292.0
margin_right = 391.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
text = "XX AM"

[node name="CenterBuildings" type="CenterContainer" parent="."]
margin_left = 483.0
margin_top = 353.0
margin_right = 959.0
margin_bottom = 1077.0

[node name="VerticalBuildings" type="VBoxContainer" parent="CenterBuildings"]
margin_left = 34.0
margin_top = 228.0
margin_right = 442.0
margin_bottom = 496.0
custom_constants/separation = 50

[node name="BuyBuildings" type="Label" parent="CenterBuildings/VerticalBuildings"]
margin_right = 408.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "Buy buildings"

[node name="HBuilding1Container" type="HBoxContainer" parent="CenterBuildings/VerticalBuildings"]
margin_top = 75.0
margin_right = 408.0
margin_bottom = 106.0

[node name="Building1" type="Label" parent="CenterBuildings/VerticalBuildings/HBuilding1Container"]
margin_top = 3.0
margin_right = 126.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Building1"
align = 1

[node name="VSeparator" type="VSeparator" parent="CenterBuildings/VerticalBuildings/HBuilding1Container"]
margin_left = 130.0
margin_right = 134.0
margin_bottom = 31.0

[node name="AMValuePerSec" type="Label" parent="CenterBuildings/VerticalBuildings/HBuilding1Container"]
margin_left = 138.0
margin_top = 3.0
margin_right = 302.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "XX AM / sec"

[node name="ImproveDistanceButton" type="Button" parent="CenterBuildings/VerticalBuildings/HBuilding1Container"]
margin_left = 306.0
margin_right = 405.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
text = "XX AM"

[node name="HBuilding2Container2" type="HBoxContainer" parent="CenterBuildings/VerticalBuildings"]
margin_top = 156.0
margin_right = 408.0
margin_bottom = 187.0

[node name="Building2" type="Label" parent="CenterBuildings/VerticalBuildings/HBuilding2Container2"]
margin_top = 3.0
margin_right = 129.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Building2"
align = 1

[node name="VSeparator" type="VSeparator" parent="CenterBuildings/VerticalBuildings/HBuilding2Container2"]
margin_left = 133.0
margin_right = 137.0
margin_bottom = 31.0

[node name="AMValuePerSec" type="Label" parent="CenterBuildings/VerticalBuildings/HBuilding2Container2"]
margin_left = 141.0
margin_top = 3.0
margin_right = 305.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "XX AM / sec"

[node name="ImproveDistanceButton" type="Button" parent="CenterBuildings/VerticalBuildings/HBuilding2Container2"]
margin_left = 309.0
margin_right = 408.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
text = "XX AM"

[node name="HBuilding3Container3" type="HBoxContainer" parent="CenterBuildings/VerticalBuildings"]
margin_top = 237.0
margin_right = 408.0
margin_bottom = 268.0

[node name="Building3" type="Label" parent="CenterBuildings/VerticalBuildings/HBuilding3Container3"]
margin_top = 3.0
margin_right = 128.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Building3"
align = 1

[node name="VSeparator" type="VSeparator" parent="CenterBuildings/VerticalBuildings/HBuilding3Container3"]
margin_left = 132.0
margin_right = 136.0
margin_bottom = 31.0

[node name="AMValuePerSec" type="Label" parent="CenterBuildings/VerticalBuildings/HBuilding3Container3"]
margin_left = 140.0
margin_top = 3.0
margin_right = 304.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "XX AM / sec"

[node name="ImproveDistanceButton" type="Button" parent="CenterBuildings/VerticalBuildings/HBuilding3Container3"]
margin_left = 308.0
margin_right = 407.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
text = "XX AM"
